--- a/Módulo_1/Semana_02/Exercicios(07_a_11)/index.html
+++ b/Módulo_1/Semana_02/Exercicios(07_a_11)/index.html
@@ -1,50 +1,191 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css">
-    <title>M01S02 Ex07-11</title>
-  </head>
-
-  <body>
-    <header
-      class="navbar navbar-light d-flex"
-      style="background-color: #8cc6f0"
-    >
-      <nav class="d-flex">
-        <a class="navbar-brand d-flex" href="./index.html">
-          <img
-            src="./Imagens/page_icon.png"
-            alt="page_icon"
-            class="img-fluid ms-2 me-3"
-            style="width: 2.156rem"
-          />
-          <h1 class="navbar-brand me-0 mb-0">Fly Away</h1>
-        </a>
-      </nav>
-      <div class="d-flex">
-        <input
-          type="search"
-          class="form-control navbar-brand"
-          style="width: 10rem"
-          placeholder="Pesquisar..."
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
         />
-        <input type="date" class="data-filter-control navbar-brand" id="date_filter"/>
-        <button type="button" class="btn btn-light navbar-brand"><img src="./Imagens/filter_icon.png" alt="filter_icon" style="width: 2.156rem;"></button>
-      </div>
-    </header>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="shortcut icon" href="./Imagens/fav_icon.png" type="image/x-icon">
+        <title>M01S02 Ex07-11</title>
+    </head>
+
+    <body style="background-color: #daddfc;">
+        <header
+            class="navbar navbar-light d-flex"
+            style="background-color: #8cc6f0"
+        >
+            <nav class="d-flex">
+                <a class="navbar-brand d-flex" href="./index.html">
+                    <img
+                        src="./Imagens/page_icon.png"
+                        alt="page_icon"
+                        class="img-fluid ms-1 me-1"
+                        style="width: 2.156rem"
+                    />
+                    <h1 class="navbar-brand me-0 mb-0">Fly Away</h1>
+                </a>
+            </nav>
+            <div class="d-flex">
+                <input
+                    type="search"
+                    class="form-control navbar-brand"
+                    style="width: 10rem"
+                    placeholder="Pesquisar..."
+                />
+                <input
+                    type="date"
+                    class="data-filter-control navbar-brand"
+                    id="date_filter"
+                />
+                <button type="button" class="btn btn-light navbar-brand">
+                    <img
+                        src="./Imagens/filter_icon.png"
+                        alt="filter_icon"
+                        style="width: 1.8rem"
+                    />
+                </button>
+            </div>
+        </header>
+        <main class="container-md" >
+            <div class="row mt-2">
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/salmon_hunt.jpg"
+                            alt="Corrida do Salmão"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Corrida do Salmão</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Cantar com ursos</li>
+                                    <li>Comer salmões</li>
+                                    <li>Contar histórias</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Ser pego em uma armadilha de caçador</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/monster_door.jpg"
+                            alt="Mundo dos Monstros"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Mundo dos Monstros</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Brincar de esconde esconde</li>
+                                    <li>Destruir um restaurante</li>
+                                    <li>Ser perseguido até a morte</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Rir ou gritar como uma criança</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/arabia.jpg"
+                            alt="Arabia"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Arábia</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Viajem de tapete</li>
+                                    <li>Fazer parkour</li>
+                                    <li>3 desejos</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Esfregar uma lâmpada</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/jungle.jpg"
+                            alt="Selva"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Selva</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Ser adotado por uma gorila</li>
+                                    <li>Ser caçado por uma onça</li>
+                                    <li>Virar amigo de um elefante</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Seu barco ser incendiado</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/kings_stone.jpeg"
+                            alt="Pedra do Rei"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Pedra do Rei</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Ser acusado pela morte de seu pai</li>
+                                    <li>Comer insetos com um suricato</li>
+                                    <li>Lutar até a morte com seu tio</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Ser herdeiro do reino</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-2">
+                        <img
+                            src="./Imagens/car_race.jpg"
+                            alt="Copa Pistão"
+                            class="card-img-top img-fluid"
+                            style="height: 17rem;"
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title">Copa Pistão</h5>
+                            <p class="card-text">
+                                <ul>
+                                    <li>Virar a velociade</li>
+                                    <li>Virar um relâmpago</li>
+                                    <li>Comer derrotados no café da manhã</li>
+                                </ul>
+                            </p>
+                            <span class="card-text text-end fw-bold" style="color: #287511;">Ser um carro</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
