feat: modal with cards descriptions added

--- a/Módulo_1/Semana_02/Exercicios(07_a_11)/index.html
+++ b/Módulo_1/Semana_02/Exercicios(07_a_11)/index.html
@@ -18,7 +18,7 @@
     <body style="background-color: #daddfc;">
         <header
             class="navbar navbar-light d-flex"
-            style="background-color: #8cc6f0"
+            style="background-color: #8cc6f0;"
         >
             <nav class="d-flex">
                 <a class="navbar-brand d-flex" href="./index.html">
@@ -71,7 +71,33 @@
                                     <li>Contar histórias</li>
                                 </ul>
                             </p>
-                            <span class="card-text text-end fw-bold" style="color: #287511;">Ser pego em uma armadilha de caçador</span>
+                            <span class="card-text text-start fw-bold" style="color: #287511; width: 66%;">Ser pego em uma armadilha de caçador</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#salmonModal">Saiba mais</button>
+                            <div class="modal fade" id="salmonModal" tabindex="-1" aria-labelledby="salmonModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="salmonModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Lugar onde os salmões sobem a correnteza e os ursos aproveitam para festar e banquetear.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Cantar com ursos</li>
+                                                <li>Comer salmões</li>
+                                                <li>Contar histórias</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -93,6 +119,32 @@
                                 </ul>
                             </p>
                             <span class="card-text text-end fw-bold" style="color: #287511;">Rir ou gritar como uma criança</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#monsterModal">Saiba mais</button>
+                            <div class="modal fade" id="monsterModal" tabindex="-1" aria-labelledby="monsterModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="monsterModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Dimensão alternativa onde monstros usam a energia gerada pelo grito/riso de crianças para sustentar a eletricidade de suas cidades.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Brincar de esconde esconde</li>
+                                                <li>Destruir um restaurante</li>
+                                                <li>Ser perseguido até a morte</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,6 +166,32 @@
                                 </ul>
                             </p>
                             <span class="card-text text-end fw-bold" style="color: #287511;">Esfregar uma lâmpada</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#arabiaModal">Saiba mais</button>
+                            <div class="modal fade" id="arabiaModal" tabindex="-1" aria-labelledby="arabiaModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="arabiaModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>País onde é possível a realização de parkour e ter um macaco e gênios de estimação. Além de ficar rico magicante.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Viajem de tapete</li>
+                                                <li>Fazer parkour</li>
+                                                <li>3 desejos</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,6 +213,32 @@
                                 </ul>
                             </p>
                             <span class="card-text text-end fw-bold" style="color: #287511;">Seu barco ser incendiado</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#jungleModal">Saiba mais</button>
+                            <div class="modal fade" id="jungleModal" tabindex="-1" aria-labelledby="jungleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="jungleModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Lugar onde é possível: lutar com onças, lutar com cobras, lutar com gorilas, lutar com elefantes, lutar com humanos e etc.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Ser adotado por uma gorila</li>
+                                                <li>Ser caçado por uma onça</li>
+                                                <li>Virar amigo de um elefante</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,6 +260,32 @@
                                 </ul>
                             </p>
                             <span class="card-text text-end fw-bold" style="color: #287511;">Ser herdeiro do reino</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#stoneModal">Saiba mais</button>
+                            <div class="modal fade" id="stoneModal" tabindex="-1" aria-labelledby="stoneModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="stoneModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Local onde crianças com marcas feitas por um babuíno são expostas a grandes alturas. Também é possível encontrar hienas esfomeadas que são ignoradas pelos que reinam na região.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Ser acusado pela morte de seu pai</li>
+                                                <li>Comer insetos com um suricato</li>
+                                                <li>Lutar até a morte com seu tio</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -177,6 +307,32 @@
                                 </ul>
                             </p>
                             <span class="card-text text-end fw-bold" style="color: #287511;">Ser um carro</span>
+                            <br>
+                            <button type="button" class="btn btn-primary mt-2 modal_button" data-bs-toggle="modal" data-bs-target="#pistonModal">Saiba mais</button>
+                            <div class="modal fade" id="pistonModal" tabindex="-1" aria-labelledby="pistonModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="pistonModalLabel">Corrida do Salmão</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                        <p>Corrida mais esperada do ano em que o vencedor ganha uma taça vazia e um contrato com a Dinoco. Em alguns casos, corredores se perdem em cidades do interior e aprendem o sentido da vida.
+                                            <p>Inclui: </p>
+                                            <ul>
+                                                <li>Virar a velociade</li>
+                                                <li>Virar um relâmpago</li>
+                                                <li>Comer derrotados no café da manhã</li>
+                                            </ul>
+                                        </p>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                                        <button type="button" class="btn btn-primary modal_button">Continuar</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
