fix: footer infos

--- a/Módulo_1/Semana_02/Exercicios(01_a_06)/index.html
+++ b/Módulo_1/Semana_02/Exercicios(01_a_06)/index.html
@@ -100,7 +100,7 @@
                 conradofortunato246@gmail.com
             </span>
             <span>
-                Brasil, Santa Catarina, Florianópolis, Ingleses, Servidão do Gerivá, 309, Casa 01, CEP 88058-355
+                Brasil, Santa Catarina, Florianópolis
             </span>
         </div>
     </footer>
